--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/qs": "^6.9.1",
+    "ant-design-vue": "^1.4.12",
     "core-js": "^3.6.4",
+    "element-ui": "^2.13.0",
+    "qs": "^6.9.1",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.2",
