--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/clipboard": "^2.0.1",
     "@types/qs": "^6.9.1",
     "ant-design-vue": "^1.4.12",
+    "axios": "^0.19.2",
+    "clipboard": "^2.0.6",
     "core-js": "^3.6.4",
     "element-ui": "^2.13.0",
     "qs": "^6.9.1",
@@ -39,11 +42,12 @@
     "@vue/eslint-config-typescript": "^5.0.1",
     "@vue/test-utils": "1.0.0-beta.31",
     "chai": "^4.1.2",
-    "eslint": "^6.7.2",
+    "eslint": "^6.8.0",
     "eslint-plugin-vue": "^6.1.2",
     "sass": "^1.25.0",
     "sass-loader": "^8.0.2",
     "typescript": "~3.7.5",
+    "vue-clipboard2": "^0.3.1",
     "vue-template-compiler": "^2.6.11"
   }
 }
